Fixed extra white space in about page

--- a/SoulMatch/src/styles/HomePage.css
+++ b/SoulMatch/src/styles/HomePage.css
@@ -18,45 +18,34 @@
     */
 }
 .textContainer2{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    max-height: 100vh;
-    box-sizing: border-box
+    text-align: center;
+    width: 600px;
+
+    margin-top: 40px;
+    margin-left: 250px;
 
 }
-.textContainer2 h1 {
-    text-align: center;
-
+.textContainer2 h2 {
     color: #ffffff;
-    font-size: 45px;
-
-
     text-shadow: 0 0 4px #000000;
+
+    font-size: 38px;
 }
 
 .textContainer2 h3 {
-    text-align: center;
     color: #ffffff;
-    font-size: 30px;
     text-shadow: 0 0 4px #000000;
+
+    font-size: 26px;
 }
 
 .textContainer2 p {
-    text-align: center;
-    margin-top: -10px;
-
     color: #ffffff;
-    font-size: 25px;
+    text-shadow: 0 0 4px #000000;
 
-    text-shadow: 0 0 5px #000000;
+    font-size: 20px;
 
 }
-
-
-
-
 
 .homeHeader {
     height: 12%;
